Deployed CGF site with Values Charter and About section

--- a/index.html
+++ b/index.html
@@ -15,14 +15,28 @@
 </head>
 <body>
     <header>
-        <img src="assets/images/logo_wordmark.png" alt="CGF Logo" id="logo" />
-        <h1>Together We Govern, Together We Thrive</h1>
+        <img src="assets/images/logo_wordmark.png" alt="CGF Logo" style="height: 60px; display: block; margin: 0 auto;" />
+        <h1 style="text-align:center;">Together We Govern, Together We Thrive</h1>
     </header>
     <main>
-        <section id="about">
+        <section id="charter">
+            <h2>CGF Values Charter</h2>
+            <p>The Causal Governance Framework (CGF) is founded on the principle that governance must serve the governed — not the gatekeepers. We reject systems driven by coincidence, inertia, and institutional apathy. Instead, we commit to intentionality, equity, and accountability in every dimension of our work.</p>
+            <ul>
+                <li><strong>Causality over Coincidence</strong> — Outcomes must be traceable to effort, policy, and intent — not to privilege, luck, or legacy.</li>
+                <li><strong>Evidence-led Change</strong> — Every CGF position is informed by data, context, and the lived realities of those most affected.</li>
+                <li><strong>Intergenerational Equity</strong> — Governance must serve tomorrow, not just today. We reject short-termism disguised as progress.</li>
+                <li><strong>Global-Local Synergy</strong> — We act locally with an awareness of global structures — and push for coherence between the two.</li>
+                <li><strong>Radical Inclusion</strong> — Marginalised voices are not invited as guests; they are positioned as architects.</li>
+                <li><strong>Transparency with Teeth</strong> — We don’t just publish. We explain, simplify, and make space for challenge.</li>
+            </ul>
+        </section>
+        <section id="about-us">
             <h2>About Us</h2>
-            <p>The Causal Governance Framework (CGF) is a strategic, data-informed initiative that confronts the structural barriers faced by ethnic minority millennials and generations to come. Rooted in decades of global governance, UN diplomacy, and intergenerational leadership, CGF delivers practical, inclusive policy innovation anchored in real-world lived experience.</p>
-            <p>Through its digital-first platform and AI-informed policy labs, CGF aims to ensure historically marginalised communities shape the trajectory of economic transformation, health equity, and social mobility. We are committed to building governance systems that reflect causality—not coincidence—in how opportunity is distributed.</p>
+            <p><strong>Who We Are</strong></p>
+            <p>CGF was born out of necessity. It was forged through the lived experiences of ethnic minority leaders, veterans, UN diplomats, and policy strategists who recognised a common truth: the system is not broken — it was built this way. We are not a think tank. We are a strategic policy lab rooted in action, committed to dismantling structural inequality using data, diplomacy, and design.</p>
+            <p><strong>Our Mission</strong></p>
+            <p>To build a governance framework where outcomes are not accidental but engineered — where power is redistributed, and opportunity is no longer inherited, but made.</p>
         </section>
     </main>
     <footer>
